--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         <button id="stop" class="hide">Stop Game</button>
     </div>
      <!--controles-->
-    <div class="controls-container">
-        <p id="result"></p>
-        
+    <div class="pantalla-principal">
         <button id="start">Start Game</button>
+    </div>
+    <div class="pantalla-final" class="hide" >
+        <p id="result"></p>
     </div>
     
     <!--Script-->
