button "play again" added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
     <div class="pantalla-final" class="hide" >
         <p id="result"></p>
+        <button id="play-again" class="hide">Play again</button>
     </div>
     
     <!--Script-->
