colorfullStage option running
El error era que estaba usando un queryselector cuando tenia que usar un get ElementByID

--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
     </div>
      <!--controles-->
     <div class="pantalla-principal">
+        <select id="custom-select">
+            <option value="0">Yagate kimi ni naru</option>
+            <option value="1">Colorful Stages</option>
+        </select>
         <button id="start">Start Game</button>
     </div>
     <div class="pantalla-final" class="hide" >
-        <p id="result"></p>
+        <p id="result">  </p>
         <button id="play-again" class="hide">Play again</button>
     </div>
     
