all done I guess

--- a/index.html
+++ b/index.html
@@ -21,12 +21,20 @@
         <button id="stop" class="hide">Stop Game</button>
     </div>
      <!--controles-->
-    <div class="pantalla-principal">
-        <select id="custom-select">
-            <option value="0">Yagate kimi ni naru</option>
-            <option value="1">Colorful Stages</option>
-        </select>
-        <button id="start">Start Game</button>
+     <div class="fondoPP">
+        <div class="pantalla-principal">
+            <p id="text">Select a theme</p>
+            <select id="custom-select">
+                <div class="option">
+                    <option id="one" value="0">Yagate kimi ni naru</option>
+                </div>
+                <div class="option">
+                    <option value="1">Colorful Stages</option>
+                </div>
+            </select>
+            
+            <button id="start">Start Game</button>
+        </div>
     </div>
     <div class="pantalla-final" class="hide" >
         <p id="result">  </p>
