type error fixed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <option id="one" value="0">Yagate kimi ni naru</option>
                 </div>
                 <div class="option">
-                    <option value="1">Colorful Stages</option>
+                    <option value="1">Colorfull Stage!</option>
                 </div>
             </select>
             
